overflow fixed

--- a/src/app.scss
+++ b/src/app.scss
@@ -211,6 +211,7 @@ body{
         border-left: 2px solid transparent;
         padding: 0 0.8rem;
         margin-bottom: 1rem;
+        overflow-x: hidden;
         small{
             display: inline-block;
             transition: all 0.8s ease;
